Connected view and presenter by callback

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-electron",
+  "name": "m-reason-app",
   "version": "1.0.0",
   "description": "M.REASON corporative application",
   "main": "main.js",
